syntax = "proto3";

package com.road.yishi.proto.campaign;

message TimeJudgeMsg {
  bool isAdd = 1;
  int32 secondCount = 2;
}
