syntax = "proto3";

package com.road.yishi.proto.minigame;

message GemInfoMsg {
  int32 mark = 1;
  int32 color = 2;
}
